restart button improvement

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/styles.css">
     <script src="scripts/jquery-3.6.0.js"></script>
     <script src="scripts/bootstrap.bundle.min.js"></script>
@@ -61,7 +61,7 @@
 
         <div id="size-controls" class="btn-group">
             <button type="button" class="btn" onclick="resize(false)">&lt;&lt;</button>
-            <label id="size-label"></label>
+            <label id="size-label"><span></span></label>
             <button type="button" class="btn" onclick="resize(true)">&gt;&gt;</button>
         </div>
     </div>
