--- a/index.html
+++ b/index.html
@@ -16,56 +16,8 @@
     <script src="scripts/index.js"></script>
 </head>
 <body>
-    <div class="game">
-        <div id="first-player" class="player">
-            <input type="text" class="player-name m-1 mt-3" value="Player 1">
-            <div class="player-mark input-group mt-3">
-                <input type="text" class="mark-edit form-control" value="&times;">
-                <div class="input-group-append">
-                    <button class="btn btn-outline-secondary dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Special</button>
-                    <div class="dropdown-menu"></div>
-                </div>
-            </div>
-            <div class="d-flex justify-content-center">
-                <select class="player-type form-select form-select-lg m-1 mt-3" aria-label=".form-select-lg example">
-                    <option value="0" selected>&#128377; Person</option>
-                    <option value="1">&#128118; [AI] Baby</option>
-                    <option value="2">&#129353; [AI] Easy</option>
-                    <option value="3">&#129352; [AI] Medium</option>
-                    <option value="4">&#129351; [AI] Dificult</option>
-                    <option value="5">&#129504; [AI] Impossible</option>
-                </select>
-            </div>
-            <p class="player-status my-3"></p>
-        </div>
-
-        <table id="game-field" class="m-auto rounded-lg"></table>
-        
-        <div id="second-player" class="player">
-            <input type="text" class="player-name mt-3" value="Player 2">
-            <div class="player-mark input-group mt-3">
-                <input type="text" class="mark-edit form-control" value="&omicron;">
-                <div class="input-group-append">
-                    <button class="btn btn-outline-secondary dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Special</button>
-                    <div class="dropdown-menu"></div>
-                </div>
-            </div>
-            <select class="player-type form-select form-select-lg mt-3 mr-1" aria-label=".form-select-lg example">
-                <option value="0">&#128377; Person</option>
-                <option value="1">&#128118; [AI] Baby</option>
-                <option value="2">&#129353; [AI] Easy</option>
-                <option value="3" selected>&#129352; [AI] Medium</option>
-                <option value="4">&#129351; [AI] Dificult</option>
-                <option value="5">&#129504; [AI] Impossible</option>
-            </select>
-            <p class="player-status mt-3"></p>
-        </div>
-
-        <div id="size-controls" class="btn-group">
-            <button type="button" class="btn" onclick="resize(false)">&lt;&lt;</button>
-            <label id="size-label"><span></span></label>
-            <button type="button" class="btn" onclick="resize(true)">&gt;&gt;</button>
-        </div>
+    <div class="task">
+        <h2>Hello</h2>
     </div>
 </body>
 </html>
